<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FR UniLever</string>
    <string name="choose">Choose...</string>

    <string-array name="type_identity">
        <item>Choose...</item>
        <item>Nomor Induk Pegawai</item>
        <item>KTP</item>
    </string-array>

    <string-array name="role">
        <item>Choose...</item>
        <item>Visitor</item>
        <item>Subcon</item>
        <item>Employee</item>
    </string-array>

    <string name="loading">loading...</string>
    <string name="detail">&#176;C</string>

    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_08xxxxxx">08XXXXXX</string>
    <string name="data_ktp">Data KTP</string>
    <string name="nama">Nama</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="alamat">Alamat</string>
    <string name="rt_rw">RT / RW</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="kel_desa">Kel / Desa</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="submit">Submit</string>
    <string name="mom_name">Nama Ibu</string>
    <string name="nik">NIK</string>
    <string name="kirim">Kirim</string>
    <string name="dari">Dari</string>
    <string name="tujuan">Pilih Tujuan :</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="gol_darah">Gol. Darah</string>
    <string name="agama">Agama</string>
    <string name="kab_kota">Kab / Kota</string>
    <string name="tempat_tanggal_lahir">Tempat/Tgl Lahir</string>
    <string name="nomor_kk">Nomor KK</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="berlaku">Berlaku Hingga</string>
    <string name="indonesia">WNI</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="primary">Primary</string>
    <string name="status_vaksin_1">Status Vaksin 1</string>
    <string name="status_vaksin_2">Status Vaksin 2</string>
</resources>