<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DestinationFormActivity">

        <ScrollView
            android:visibility="gone"
            android:id="@+id/scrollViewWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <LinearLayout
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:gravity="center_horizontal"
                android:id="@+id/linear_layout_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">




                <androidx.cardview.widget.CardView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Card.Container">

                    <LinearLayout
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_marginHorizontal="3dp"
                                android:layout_gravity="center"
                                android:id="@+id/photo_profile"
                                android:layout_width="130dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:src="@drawable/ic_baseline_person_24" />

                            <LinearLayout
                                android:layout_marginHorizontal="3dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextLabel"
                                    android:text="@string/nik"/>
                                <TextView
                                    android:id="@+id/tvNik"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/loading"/>

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextLabel"
                                    android:text="@string/nama_lengkap"/>
                                <TextView
                                    android:id="@+id/tvNama"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/loading"/>

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextLabel"
                                    android:text="@string/tempat_tanggal_lahir"/>
                                <TextView
                                    android:id="@+id/tvTtl"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/loading"/>

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextLabel"
                                    android:text="@string/status_vaksin_1"/>
                                <TextView
                                    android:id="@+id/tvVaksin1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/loading"/>

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextLabel"
                                    android:text="@string/status_vaksin_2"/>
                                <TextView
                                    android:id="@+id/tvVaksin2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/loading"/>

                                <!--                                <TextView-->
                                <!--                                    android:layout_marginTop="10dp"-->
                                <!--                                    android:layout_width="match_parent"-->
                                <!--                                    android:layout_height="wrap_content"-->
                                <!--                                    style="@style/TextLabel"-->
                                <!--                                    android:text="@string/alamat"/>-->
                                <!--                                <TextView-->
                                <!--                                    android:id="@+id/alamat"-->
                                <!--                                    android:layout_width="match_parent"-->
                                <!--                                    android:layout_height="wrap_content"-->
                                <!--                                    android:text="@string/loading"/>-->

                                <!--                                <TextView-->
                                <!--                                    android:layout_marginTop="10dp"-->
                                <!--                                    android:layout_width="match_parent"-->
                                <!--                                    android:layout_height="wrap_content"-->
                                <!--                                    style="@style/TextLabel"-->
                                <!--                                    android:text="@string/rt_rw"/>-->
                                <!--                                <TextView-->
                                <!--                                    android:id="@+id/rtRw"-->
                                <!--                                    android:layout_width="match_parent"-->
                                <!--                                    android:layout_height="wrap_content"-->
                                <!--                                    android:text="@string/loading"/>-->

                                <!--                                <TextView-->
                                <!--                                    android:layout_marginTop="10dp"-->
                                <!--                                    android:layout_width="match_parent"-->
                                <!--                                    android:layout_height="wrap_content"-->
                                <!--                                    style="@style/TextLabel"-->
                                <!--                                    android:text="@string/kel_desa"/>-->
                                <!--                                <TextView-->
                                <!--                                    android:id="@+id/kelDesa"-->
                                <!--                                    android:layout_width="match_parent"-->
                                <!--                                    android:layout_height="wrap_content"-->
                                <!--                                    android:text="@string/loading"/>-->



                            </LinearLayout>

                        </LinearLayout>


                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/nomor_telepon"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etNoTelp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/bg_edittext"
                            android:drawableEnd="@drawable/ic_baseline_call_24"
                            android:hint="@string/_08xxxxxx"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingHorizontal="20dp" />

                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/tujuan"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvDestination"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>





                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>



    </RelativeLayout>
</layout>